Tests/Negative/NewOnTraitType.mr
trait T {}

fun main(): i32 {
    var p: *T = new T; // Error: Cannot instantiate trait 'T'
    return 0;
}
